--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,9 +20,10 @@
         <!-- Top navigation -->
         <nav id="top-nav">
             <ul>
-                <li><a href="./">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Posts</a></li>
+                <li><a href="{% url "home" %}">Home</a></li>
+                <li><a href="{% url "about" %}">About</a></li>
+                <li><a href="{% url "post-list" %}">Posts</a></li>
+                <li><a href="{% url "topic-list"%}">Topics</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -43,10 +44,10 @@
                   </ul>
                 </section>
                 <section id="topics-list">
-                  <h3>Topics</h3>
+                  <h3>Top Topics</h3>
                   <ul>
-                    {% for topic in Topics %}
-                      <li>{{ topic.name }}({{topic.num_posts}})</li>
+                    {% for topic in topics %}
+                      <li><a href={{ topic.get_absolute_url}}>{{ topic.name }}({{topic.num_posts}})</a></li>
                     {% endfor %}
                   </ul>
                 </section>
@@ -54,9 +55,12 @@
               </div>
         </main>
         <!-- The footer -->
-        <footer id="site-footer">
+        <footer >
             <!-- Print copyright with the current year -->
+            <div id="footer">
             Copyright &copy;{% now 'Y' %}
+            <a href="{% url "terms-and-conditions" %}">Terms & conditions</a>
+          </div>
         </footer> 
     </body>
 </html>
