--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,7 +1,13 @@
 {% extends "blog/base.html" %}
 
 {% block main %}
-<p>Welcome to the home page of my blog!</p>
+<section>
+  <h1>Latest posts</h1>
+  {% for post in latest_posts %}
+    {% include "blog/post_preview.html" %}
+  {% endfor %}
+</section>
+<!--<p>Welcome to the home page of my blog!</p>
 
 <section class="latest-article-preview">
 
@@ -11,6 +17,6 @@
       <em>{{ post.published|timesince }} ago</em>
       {{ post.content|linebreaks }}
     </article>
-    {% endfor %}
+    {% endfor %}-->
 </section>
 {% endblock %}
