--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,15 @@
     </head>
 
     <body>
+      {% if messages %}
+      <div class="django-messages">
+        {% for message in messages %}
+        <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+        {% endfor %}
+      </div>
+      {% endif %}
+      {# Make a wrapper around the content #}
+      <div class="wrapper">
         <!-- The header -->
         <header id="site-header">
             <h1>My Blog</h1>
