--- a/blog/static/blog/base.css
+++ b/blog/static/blog/base.css
@@ -1,15 +1,12 @@
 html {
-  height: 100%;
-  width: 100%; /* Use whole height of browser */
+  height: 100%; /* Use whole height of browser */
 }
 body {
-  display: grid;  /* Use CSS grid */
-  font-family: Arial, Helvetica, sans-serif;
-  grid-template-rows: auto auto 1fr auto;  /* Sticky footer */
-  margin: 0 auto;  /* Centers the page */
-  max-width: 1000px;  /* Set max width */
+  margin: 0;
+  height: 100%;
   min-height: 100%;  /* Full height */
-  padding: 1rem;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 body .wrapper {
   display: grid;  /* Use CSS grid */
@@ -35,7 +32,8 @@ body .wrapper {
   background: #bdfcb3;
   color: #355430;
 }
-  /*
+/*...*/  
+/*
    * Style the <a> tags. Have a consistent colour for both visited
    * and unvisited links. Show underline on hover only.
    */
@@ -194,4 +192,8 @@ form .errorlist {
   color: red;
   padding: 0 0 0 1.5em;
   margin: 0;
+}
+p{
+  display: block;
+  margin: 0 auto;
 }
