--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -73,5 +73,6 @@
           </div>
         </footer> 
         </div>
+        <script src="{% static "blog/comments.js" %}"></script>
     </body>
 </html>
