--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,4 +17,22 @@
 {% if post.banner %}
     <img src="{{ post.banner.url }}" width="100%" alt="Banner image">
   {% endif %}
+
+<section class="comments">
+  {% if comments %}
+    <h3>Latest comments</h3>
+    {% for comment in comments %}
+      <div class="comment">
+        <span class="by-line">By {{ comment.name }} | <time>{{ comment.created }}</time></span>
+        {{ comment.content|linebreaks }}
+      </div>
+    {% endfor %}
+  {% endif %}
+
+  <h3>Leave a comment</h3>
+  {# Alias the variable for the included template #}
+  {% with form=comment_form %}
+    {% include "blog/comment_form.html" %}
+  {% endwith %}
+</section>
 {% endblock %}
